[package]
name = "ghostchat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "io-util", "io-std"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.22"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
zeroize = "1.7"
crossterm = "0.28"
anyhow = "1.0"