[package]
name = "ghostchat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.0"
anyhow = "1.0.102"
